add details_room page

--- a/src/main/resources/templates/data_machine.html
+++ b/src/main/resources/templates/data_machine.html
@@ -231,7 +231,7 @@
                   <td>氙气放映机</td>
                   <td>B 系列</td>
                   <td>DP2K-23B</td>
-				  <th><a href="../examples/details.html">详情</a></th>
+				  <th> <a href="/details_error">详情</a></th>
                 </tr>
                 <tr>
                   <td>巴可数字放映机</td>
