--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -236,46 +236,52 @@
                     <tr>
                       <th>序号</th>
                       <th>影厅名称</th>
+                      <th>影厅类型</th>
                       <th>座位数量</th>
-                      <th>其他</th>
                       <th>备注</th>
+                      <th>详情</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
                       <td>1</td>
                       <td>1 号厅</td>
+                      <td>IMAC厅</td>
                       <td>120</td>
                       <td>-</td>
-                      <td>-</td>
+                      <td><a href="/details_room"> 详情>></a></td>
                     </tr>
                     <tr>
                       <td>2</td>
                       <td>2 号厅</td>
+                      <td>激光厅</td>
                       <td>85</td>
-                      <td>0-</td>
                       <td>-</td>
+                      <td>详情>></td>
                     </tr>
                     <tr>
                       <td>3</td>
+                      <td>3 号厅</td>
                       <td>IMAX 厅</td>
                       <td>350</td>
                       <td>-</td>
-                      <td>-</td>
+                      <td>详情>></td>
                     </tr>
                     <tr>
                       <td>4</td>
+                      <td>4 号厅</td>
                       <td>VIP 厅</td>
                       <td>20</td>
                       <td>-</td>
-                      <td>-</td>
+                      <td>详情>></td>
                     </tr>
 					<tr>
                       <td>5</td>
+                      <td>5 号厅</td>
                       <td>中国巨幕厅</td>
                       <td>300</td>
                       <td>-</td>
-                      <td>-</td>
+                      <td>详情>></td>
                     </tr>
                     </tbody>
                   </table>
@@ -283,476 +289,6 @@
                 <!-- /.col -->
               </div>
               <!-- /.row -->
-			     <!-- Table row -->
-           <address></address>
-              <!-- Table row -->
-              <div class="row">
-			  <h4>&nbsp&nbsp&nbsp放映机信息：</h4>
-                <div class="col-12 table-responsive">
-                  <table class="table table-striped">
-                    <thead>
-                    <tr>
-                      <th>品牌</th>
-                      <th>型号</th>
-                      <th>序列号</th>
-                      <th>购买日期</th>
-					  <th>所在影厅</th>
-                      <th>备注</th>
-					  <th>详情</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                      <td>巴可</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-					  <td>1 号厅</td>
-                      <td>-</td>
-					  <th><a href="">>>详情</a></th>
-
-                    </tr>
-					<tr>
-                      <td>科视</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-					  <td>1 号厅</td>
-                      <td>-</td>
-					  <th><a href="">>>详情</a></th>
-                    </tr>
-					<tr>
-                      <td>巴可</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-					  <td>3 号厅</td>
-                      <td>-</td>
-					  <th><a href="">>>详情</a></th>
-                    </tr><tr>
-                      <td>NEC</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-					  <td>1 号厅</td>
-                      <td>-</td>
-					  <th><a href="">>>详情</a></th>
-                    </tr><tr>
-                      <td>巴可</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-					  <td>2 号厅</td>
-                      <td>-</td>
-					  <th><a href="">>>详情</a></th>
-                    </tr>            
-                    </tbody>
-                  </table>
-                </div>
-                <!-- /.col -->
-              </div>
-              <!-- /.row -->
-			   <address></address>
-              <!-- Table row -->
-              <div class="row">
-			  <h4>&nbsp&nbsp&nbsp服务器信息：</h4>
-                <div class="col-12 table-responsive">
-                  <table class="table table-striped">
-                    <thead>
-                    <tr>
-                      <th>品牌</th>
-                      <th>型号</th>
-                      <th>序列号</th>
-                      <th>购买日期</th>
-                      <th>备注</th>
-					  <th>详情</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                      <td>GDC</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-					  <th><a href="">>>详情</a></th>
-                    </tr>
-					<tr>
-                      <td>杜比</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-					  <th><a href="">>>详情</a></th>
-                    </tr>
-					<tr>
-                      <td>杜比</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-					  <th><a href="">>>详情</a></th>
-                    </tr><tr>
-                      <td>杜比</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-					  <th><a href="">>>详情</a></th>
-                    </tr><tr>
-                      <td>NEC</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-					  <th><a href="">>>详情</a></th>
-                    </tr>            
-                    </tbody>
-                  </table>
-                </div>
-                <!-- /.col -->
-              </div>
-              <!-- /.row -->
-			   <address></address>
-              <!-- Table row -->
-              <div class="row">
-			  <h4>&nbsp&nbsp&nbsp音频处理器信息：</h4>
-                <div class="col-12 table-responsive">
-                  <table class="table table-striped">
-                    <thead>
-                    <tr>
-                      <th>品牌</th>
-                      <th>型号</th>
-                      <th>序列号</th>
-                      <th>购买日期</th>
-                      <th>备注</th>
-					  <th>详情</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                      <td>杜比</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-					  <th><a href="">>>详情</a></th>
-                    </tr>
-					<tr>
-                      <td>音王</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-					  <th><a href="">>>详情</a></th>
-                    </tr>
-					<tr>
-                      <td>杜比</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-					  <th><a href="">>>详情</a></th>
-                    </tr><tr>
-                      <td>NEC</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-					  <th><a href="">>>详情</a></th>
-                    </tr><tr>
-                      <td>巴可</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-					  <th><a href="">>>详情</a></th>
-                    </tr>            
-                    </tbody>
-                  </table>
-                </div>
-                <!-- /.col -->
-              </div>
-              <!-- /.row -->
-			  
-<address></address>
-              <!-- Table row -->
-              <div class="row">
-			  <h4>&nbsp&nbsp&nbsp功放信息：</h4>
-                <div class="col-12 table-responsive">
-                  <table class="table table-striped">
-                    <thead>
-                    <tr>
-                      <th>品牌</th>
-                      <th>型号</th>
-                      <th>序列号</th>
-                      <th>购买日期</th>
-                      <th>备注</th>
-					  <th>详情</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                      <td>杜比</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-					  <th><a href="">>>详情</a></th>
-                    </tr>
-					<tr>
-                      <td>音王</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-					  <th><a href="">>>详情</a></th>
-					<tr>
-                      <td>杜比</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-					  <th><a href="">>>详情</a></th>
-                    </tr><tr>
-                      <td>NEC</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-					  <th><a href="">>>详情</a></th>
-                    </tr><tr>
-                      <td>巴可</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-					  <th><a href="">>>详情</a></th>
-                    </tr>            
-                    </tbody>
-                  </table>
-                </div>
-                <!-- /.col -->
-              </div>
-              <!-- /.row --><address></address>
-              <!-- Table row -->
-              <div class="row">
-			  <h4>&nbsp&nbsp&nbsp音响信息：</h4>
-                <div class="col-12 table-responsive">
-                  <table class="table table-striped">
-                    <thead>
-                    <tr>
-                      <th>品牌</th>
-                      <th>型号</th>
-                      <th>序列号</th>
-                      <th>购买日期</th>
-                      <th>备注</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                      <td>杜比</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-                    </tr>
-					<tr>
-                      <td>音王</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-                    </tr>
-					<tr>
-                      <td>杜比</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-                    </tr><tr>
-                      <td>NEC</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-                    </tr><tr>
-                      <td>巴可</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-                    </tr>            
-                    </tbody>
-                  </table>
-                </div>
-                <!-- /.col -->
-              </div>
-              <!-- /.row --><address></address>
-              <!-- Table row -->
-              <div class="row">
-			  <h4>&nbsp&nbsp&nbsp TMS信息：</h4>
-                <div class="col-12 table-responsive">
-                  <table class="table table-striped">
-                    <thead>
-                    <tr>
-                      <th>品牌</th>
-                      <th>型号</th>
-                      <th>序列号</th>
-                      <th>购买日期</th>
-                      <th>备注</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                      <td>杜比</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-                    </tr>
-					<tr>
-                      <td>音王</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-                    </tr>
-					<tr>
-                      <td>杜比</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-                    </tr><tr>
-                      <td>NEC</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-                    </tr><tr>
-                      <td>巴可</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-                    </tr>            
-                    </tbody>
-                  </table>
-                </div>
-                <!-- /.col -->
-              </div>
-              <!-- /.row -->
-			  <address></address>
-              <!-- Table row -->
-              <div class="row">
-			  <h4>&nbsp&nbsp&nbsp 3D系统信息：</h4>
-                <div class="col-12 table-responsive">
-                  <table class="table table-striped">
-                    <thead>
-                    <tr>
-                      <th>品牌</th>
-                      <th>型号</th>
-                      <th>序列号</th>
-                      <th>购买日期</th>
-                      <th>备注</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                      <td>杜比</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-                    </tr>
-					<tr>
-                      <td>音王</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-                    </tr>
-					<tr>
-                      <td>杜比</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-                    </tr><tr>
-                      <td>NEC</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-                    </tr><tr>
-                      <td>巴可</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-                    </tr>            
-                    </tbody>
-                  </table>
-                </div>
-                <!-- /.col -->
-              </div>
-              <!-- /.row -->
-			  <address></address>
-              <!-- Table row -->
-              <div class="row">
-			  <h4>&nbsp&nbsp&nbsp 4D系统信息：</h4>
-                <div class="col-12 table-responsive">
-                  <table class="table table-striped">
-                    <thead>
-                    <tr>
-                      <th>品牌</th>
-                      <th>型号</th>
-                      <th>序列号</th>
-                      <th>购买日期</th>
-                      <th>备注</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                      <td>杜比</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-                    </tr>
-					<tr>
-                      <td>音王</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-                    </tr>
-					<tr>
-                      <td>杜比</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-                    </tr><tr>
-                      <td>NEC</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-                    </tr><tr>
-                      <td>巴可</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
-                      <td>2018/6/24</td>
-                      <td>-</td>
-                    </tr>            
-                    </tbody>
-                  </table>
-                </div>
-                <!-- /.col -->
-              </div>             
-                
               </div>
             </div>
             <!-- /.invoice -->
