--- a/src/main/resources/templates/details_error.html
+++ b/src/main/resources/templates/details_error.html
@@ -222,9 +222,11 @@
            <address></address>
               <!-- Table row -->
               <div class="row">
-			  <h4>&nbsp&nbsp&nbsp解决方法：</h4>
-                <div class="col-12 table-responsive">
-                  <table class="table table-striped">
+				  <div class="col-6 table-responsive">
+					  <div >
+						  <h4>&nbsp&nbsp&nbsp解决方法：</h4>
+					  </div>
+                  	<table class="table table-striped">
                     <thead>
                     <tr>
                       <th>状态</th>
@@ -254,12 +256,11 @@
                     </tr>
                     </tbody>
                   </table>
-                </div>
-				<div class="row">
-			  <h4>&nbsp&nbsp&nbsp操作视频：</h4>
-                <div class="col-12 table-responsive">
-                  &nbsp&nbsp&nbsp视频加载中...
-                </div>
+				  </div>
+				  <div class="col-6 table-responsive">
+					<h4>&nbsp&nbsp&nbsp操作视频：</h4>
+						&nbsp&nbsp&nbsp视频加载中...
+				  </div>
                 <!-- /.col -->
               </div>
               <!-- /.row -->
