redesign the details page

--- a/src/main/resources/templates/details_room.html
+++ b/src/main/resources/templates/details_room.html
@@ -197,33 +197,73 @@
               </div>
               <!-- info row -->
               <div class="row invoice-info">
-                <div class="col-sm-4 invoice-col">
-                  <strong>省市区: </strong>
-                    <br>北京市 朝阳区<br>
-                  <address>
-                  </address>
-				  <strong>详细地址: </strong>
-                    <br>北京市 朝阳区 平乐园100号<br>
+                <div class="col-sm-6">
+                  <div class="col-sm-6 invoice-col">
+                    <address>
+                      <br/>
+                      <strong>省市区: </strong>
+                      <br>北京市 朝阳区<br>
+                      <br/>
+                      <strong>详细地址: </strong>
+                      <br>北京市 朝阳区 平乐园100号<br>
+                    </address>
+                    <address>
+                      &nbsp;
+                    </address>
+                  </div>
+                  <div class="row col-sm-12">
+                    <div class="col-sm-12 row">
+                      <!-- /.col -->
+                      <div class="col-sm-6 invoice-col">
+                        <address>
+                          <strong>影院经理：</strong><br>
+                          张三<br>
+                          联系电话: (555) 539-1037<br>
+                          电子邮箱: john.doe@example.com
+                        </address>
+                      </div>
+                      <!-- /.col -->
+                      <div class="col-sm-6 invoice-col">
+                        <address>
+                          <strong>放映主管：</strong><br>
+                          李四<br>
+                          联系电话: 13000000000<br>
+                          电子邮箱: tom.doe@example.com
+                        </address>
+                      </div>
+                      <!-- /.col -->
+                    </div>
+                    <div class="col-sm-12 row">
+                      <!-- /.col -->
+                      <div class="col-sm-6 invoice-col">
+                        <address>
+                          <strong>影院经理：</strong><br>
+                          张三<br>
+                          联系电话: (555) 539-1037<br>
+                          电子邮箱: john.doe@example.com
+                        </address>
+                      </div>
+                      <!-- /.col -->
+                      <div class="col-sm-6 invoice-col">
+                        <address>
+                          <strong>放映主管：</strong><br>
+                          李四<br>
+                          联系电话: 13000000000<br>
+                          电子邮箱: tom.doe@example.com
+                        </address>
+                      </div>
+                      <!-- /.col -->
+                    </div>
+                  </div>
                 </div>
-                <!-- /.col -->
-                <div class="col-sm-4 invoice-col">
-                  <address>
-                    <strong>影院经理：</strong><br>                 
-                    张三<br>
-                    联系电话: (555) 539-1037<br>
-                    电子邮箱: john.doe@example.com
-                  </address>
+                <div class="col-sm-6">
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <h5>北京XXXX影院 第 2 影厅 布局平面图</h5>
+                    </div>
+                    <img class="img-fluid" alt="photo" width="55%" th:src="@{/dist/img/WechatIMG269.jpeg}">
+                  </div>
                 </div>
-                <!-- /.col -->
-                <div class="col-sm-4 invoice-col">
-                  <address>
-                    <strong>放映主管：</strong><br>                 
-                    李四<br>
-                    联系电话: 13000000000<br>
-                    电子邮箱: tom.doe@example.com
-                  </address>
-                </div>
-                <!-- /.col -->
               </div>
               <!-- /.row -->
 			     <!-- Table row -->
