--- a/src/main/resources/templates/data_search.html
+++ b/src/main/resources/templates/data_search.html
@@ -188,25 +188,28 @@
               <!-- form start -->
               <form role="form">
                 <div class="card-body">
-                  <div class="form-group">
-                    <label for="exampleInputEmail1">标准文件名称/标准编号：</label>
-                    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="例：电影院星级的划分与评定/GY/T 248-2011">
+                  <div class="form-group row">
+                    <div class="col-6">
+                      <label>标准文件名称/标准编号：</label>
+                      <input type="text" class="form-control" id="exampleInputEmail1" placeholder="例：电影院星级的划分与评定/GY/T 248-2011">
+                    </div>
+                    <div class="col-6">
+                      <label>标准类型</label>
+                      <div class="form-group">
+                        <!--<label>Select</label>-->
+                        <select class="form-control">
+                          <option>国家标准</option>
+                          <option>行业标准</option>
+                          <option>团体标准</option>
+                          <option>企业标准</option>
+                        </select>
+                      </div>
+                    </div>
                   </div>
-                  <div class="form-group">
-						<label for="exampleInputPassword1">标准类型</label>
-						<div class="form-group">
-						<!--<label>Select</label>-->
-							<select class="form-control">
-							  <option>国家标准</option>
-							  <option>行业标准</option>
-							  <option>团体标准</option>
-							  <option>企业标准</option>
-							</select>
-						</div>
-					</div>
                 <!-- /.card-body -->
-                <div class="card-footer">
-                  <button style="float: right" type="submit" class="btn btn-primary">提交</button>
+                  <div class="card-footer">
+                    <button style="float: right" type="submit" class="btn btn-primary">提交</button>
+                  </div>
                 </div>
               </form>
             </div>        
