--- a/src/main/resources/templates/model/left.html
+++ b/src/main/resources/templates/model/left.html
@@ -161,7 +161,7 @@
                 </li>
             </ul>
         </li>
-        <li class="nav-item">
+        <li class="nav-item has-treeview">
             <a href="#" class="nav-link">
                 <i class="nav-icon fa fa-calendar"></i>
                 <p>
