--- a/src/main/resources/templates/cinema_search.html
+++ b/src/main/resources/templates/cinema_search.html
@@ -187,38 +187,40 @@
               </div>
               <!-- /.card-header -->
               <!-- form start -->
-              <form role="form">
+              <form role="form" action="/show" method="get">
                 <div class="card-body">
                   <div class="form-group">
                     <div class="row">
                       <div class="col-3 float-lg-left">
                         <div class="form-group">
                           <label>所在省市：</label>
-                          <select id="province" class="form-control">
+                          <select id="province" class="form-control" name="province">
                           </select>
                         </div>
                       </div>
                       <div class="col-3 float-lg-right">
                         <div class="form-group">
                           <label>所在区：</label>
-                          <select id="city" class="form-control">
+                          <select id="city" class="form-control" name="city">
                           </select>
                         </div>
                       </div>
                       <div class="form-group col-3 float-lg-left">
                         <label>影院名称：</label>
-                        <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城">
+                        <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城" name="cinemaName">
                       </div>
                       <div class="form-group col-3 float-lg-right">
                         <label>影院经理：</label>
-                        <input type="text" class="form-control" placeholder="例：张XX">
+                        <input type="text" class="form-control" placeholder="例：张XX" name="responsible">
                       </div>
                     </div>
                   </div>
 					<!-- /.card-body -->
+                  <div class="form-group">
 					<div class="card-footer">
 					  <button style="float: right" type="submit" class="btn btn-primary">查找</button>
                 	</div>
+                  </div>
 				</div>
               </form>
 		</div>
